Fix nav text
Previous commit over-rode some of Bootstrap's default font-sizing, making the nav bar too small.

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h1 {
 	font-weight: bolder;
 	font-family: lato, sans-serif;
 	text-transform: uppercase;
+	font-size: 20px;
 }
 
 
